2008-09-25 fabien
* modify some selection_name on listbox to be unique and avoid conflic

2008-09-23 fabien
* remove standardSecurity extension. The name was in conflict with an Extension in erp5_core. Move it in safi_egov bt and rename it in ERP5EGov_Security.

2008-09-12 fabien
* Change all indentation, thanks to julien patch
* move annonymous_workflow from egov public bt to safi_egov private bt wich is a more appropriate place.

2008-09-11 fabien
* Make anonymous subscription safer using a login and password to check the application progress.

2008-09-09 fabien
* report_section refactoring to be more generic and easier to customize with more pdf

2008-08-26 fabien
* add erp5_captcha skin folder
* add portal_sessions tool

2008-06-10 fabien
* add erp5_egov_catalog to dependence list

2008-06-07 fabien
* move all web page and web site to safi_egov bt

2008-06-04 fabien
* enhance EGov_Base_editAndNextStep script, now it should be possible to not
have a modified Base_edit script
* moved here some script from safi_tva bt

2008-05-26 fabien
bt refactoring :
* change portal_types names
* add functionality (captcha, contextual help,...)
* enhance security, ...

2008-03-11 fabien
* hide Preference button on the workspace for annonymous users
* add a login_form sript to override the existing one and permit to redirect on the appropriate page

2008-03-10 fabien
* add some controls on validation state, add two widgets to see pending requests and users documents, align the form on the right, but all other pages are centered, enhance listbox page template to handle custom listbox fields.

2008-03-07 fabien
* set up security and bring lot of change on all the bt

2007-12-27 fabien
* Initial prototype